Pipenv: Fix the version specifier for tornado (#1014)
I'm not sure why Pipenv doesn't throw an error here, but without the comma it parses as ">=5.0", ignoring the "<6.0" clause.

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -61,6 +61,6 @@ psutil = "*"
 toml = "*"
 # 5.0 has a fix for etag header: https://github.com/tornadoweb/tornado/issues/2262
 # 6.0 doesn't support Python 2
-tornado = ">=5.0<6.0"
+tornado = ">=5.0,<6.0"
 tzlocal = "*"
 watchdog = "*"
