--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -28,6 +28,8 @@ graphviz = "*"
 pydot = "*"
 tensorflow = "*"
 seaborn = "*"
+prometheus-client = "*"
+
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
