Refactor docker configs to pass in version and update for nvidia-docker (#1062)
* Allow Dockerfile to get streamlit version as argument.

* Update docker-compose to 0.43.2

* Delete stray config and credentials files.  use one from base.

* Use STREAMLIT_VERSION

* Update update_version.py to update docker streamlit version

* Consolidate mnist-cnn.py to one file and add epoch duration.

Also trivially add epoch duration which is used to compare cpu/gpu times.

* Add docker pull command

* Disable CORS for docker reports

* Create dockerfile for gpu version of mnist.

* Update docs with instuctions on setting up nvidia-docker on AWS

* Add GPU monitoring but comment out.

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,10 +1,12 @@
 .PHONY: build push aws
 
+STREAMLIT_VERSION := 0.43.2
+
 #######################################################################
 # Build
 #######################################################################
 build:
-	cd aws; DOCKER_TLS_VERIFY= DOCKER_HOST=unix:///var/run/docker.sock docker-compose build
+	cd aws; STREAMLIT_VERSION=$(STREAMLIT_VERSION) DOCKER_TLS_VERIFY= DOCKER_HOST=unix:///var/run/docker.sock docker-compose build
 
 #######################################################################
 # Push
@@ -13,7 +15,13 @@ push:
 	./push.sh
 
 #######################################################################
+# Pull
+#######################################################################
+pull:
+	cd aws; STREAMLIT_VERSION=$(STREAMLIT_VERSION) docker-compose pull
+
+#######################################################################
 # Run
 #######################################################################
 aws:
-	cd aws; docker-compose up -d
+	cd aws; STREAMLIT_VERSION=$(STREAMLIT_VERSION) docker-compose up -d
