--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -51,7 +51,7 @@ future = "*"
 # specifically concurrent.futures in python2
 futures = {version = "*",markers = "python_version < '3.0'"}
 numpy = "*"
-pandas = "*"
+pandas = ">=0.18.0"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
 pillow = "!=5.1.0"
 # Set protobuf version based on the protoc version on the release machine (i.e.
