Speed up webpack with caching (#1184)
The big thing here is `HardSourceWebpackPlugin` (https://github.com/mzgoddard/hard-source-webpack-plugin) which speeds up webpack dramatically once the cache is created.

On my machine, with a warm hard-source cache, `yarn start` takes about 8 seconds (down from 21), and `make build` takes about 35 seconds (down from 53).

I also pruned a couple unused dependencies (lodash and static-eval) - though sadly both of these are used transitively, so this doesn't buy us any reduction in dependency count.

Finally, `make all` no longer cleans the project, so we won't accidentally blow away the various generated bits that make builds less painfully slow.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "deck.gl": "^7.1.10",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
-    "lodash": "^4.17.15",
     "mapbox-gl": "^1.1.1",
     "mixpanel-browser": "^2.29.0",
     "moment": "^2.22.2",
@@ -50,7 +49,6 @@
     "react-virtualized": "^9.21.0",
     "reactstrap": "^8.0.1",
     "recharts": "^1.6.2",
-    "static-eval": "^2.0.2",
     "styletron-engine-atomic": "^1.4.0",
     "styletron-react": "^5.2.0",
     "typed-signals": "^1.0.5",
@@ -89,6 +87,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-relay": "^1.3.5",
+    "hard-source-webpack-plugin": "^0.13.1",
     "scss-to-json": "^2.0.0",
     "typescript": "^3.5.3"
   },
