--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,17 @@ workflows:
   version: 2
   circleci:
     jobs:
+      - python-3.7.4
       - python-2.7.16:
           requires:
             - python-3.7.4
-      - python-3.7.4
+      - cypress-approval:
+          type: approval
+          requires:
+            - python-3.7.4
+      - cypress:
+          requires:
+            - cypress-approval
 
 jobs:
   python-3.7.4: &job-template
@@ -26,7 +33,7 @@ jobs:
       #################################################################
       # Pre Cache Steps
       #################################################################
-      - run:
+      - run: &set_env_vars
           name: set environment variables if in conda.
           command: |
             if conda info; then
@@ -42,7 +49,7 @@ jobs:
               md5sum make.bin > ~/make.md5
             fi
 
-      - run:
+      - run: &install_graphviz
           name: install graphviz ie dot
           command: |
             echo 'export SUDO="sudo"' >> $BASH_ENV
@@ -64,11 +71,10 @@ jobs:
             md5sum lib/Pipfile.locks/${CIRCLE_JOB} > ~/python_version.md5
             md5sum $(which python) >> ~/python_version.md5
 
-      - run:
-          name: Create node_modules cache key.
+      - run: &create_yarn_cache_key
+          name: Create yarn cache key.
           command: |
             md5sum frontend/yarn.lock > ~/yarn.lock.md5
-            md5sum $(which python) >> ~/yarn.lock.md5
 
       - run:
           # There is no lock file for the protobufs so we run a checksum
@@ -86,12 +92,12 @@ jobs:
           keys:
           - v12-opt-conda-{{ checksum "~/python_version.md5" }}
 
-      - restore_cache:
+      - restore_cache: &restore_virtualenv
           name: Restore virtualenv from cache
           keys:
           - v12-python-venv-{{ checksum "~/python_version.md5" }}
 
-      - restore_cache:
+      - restore_cache: &restore_nvm
           name: Restore nvm and node_modules from cache
           keys:
           - v12-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
@@ -101,12 +107,12 @@ jobs:
           keys:
           - v12-protobuf-{{ checksum "~/protobuf.md5" }}
 
-      - restore_cache:
+      - restore_cache: &restore_make
           name: Restore make from cache
           keys:
           - v12_make.bin-{{ checksum "~/make.md5" }}
 
-      - restore_cache:
+      - restore_cache: &restore_dot
           name: Restore dot from cache
           keys:
           - v12_dot.bin-{{ checksum "~/dot.md5" }}
@@ -114,7 +120,7 @@ jobs:
       #################################################################
       # Pre Make commands
       #################################################################
-      - run:
+      - run: &install_make
           name: install make
           command: |
             if [ -s make.bin ] ; then
@@ -133,7 +139,7 @@ jobs:
           paths:
             - make.bin
 
-      - run:
+      - run: &install_dot
           name: install dot
           command: |
             if [ -s dot.bin ] ; then
@@ -156,7 +162,7 @@ jobs:
       #################################################################
       # Run 'make init'
       #################################################################
-      - run:
+      - run: &install_nvm
           name: Install NVM ie nodejs
           command: |
             if [ ! -d ~/.nvm ] ; then
@@ -174,7 +180,7 @@ jobs:
             echo 'export NVM_DIR="$HOME/.nvm"' >> $BASH_ENV
             echo 'source "$NVM_DIR/nvm.sh"' >> $BASH_ENV
 
-      - run:
+      - run: &activate_virtualenv
           name: Run make pipenv-lock and create virtualenv if necessary.
           command: |
             if echo ${CIRCLE_JOB} | egrep -qi conda ; then
@@ -208,12 +214,12 @@ jobs:
               echo 'source venv/bin/activate' >> $BASH_ENV
             fi
 
-      - run:
+      - run: &make_develop
           name: Run make develop
           command: |
             make develop
 
-      - run:
+      - run: &generate_protobufs
           name: Generate protobufs
           command: |
             # There's a chance this file could be a cached version when
@@ -266,8 +272,8 @@ jobs:
           name: Save nvm and node_modules to cache
           key: v12-nvm_node_modules-{{ checksum "~/yarn.lock.md5" }}
           paths:
-            - frontend/node_modules
             - ~/.nvm
+            - ~/.cache
 
       - save_cache:
           name: Save generated protobufs to cache
@@ -280,3 +286,105 @@ jobs:
     <<: *job-template
     docker:
       - image: circleci/python:2.7.16-stretch
+
+  cypress:
+    docker:
+      - image: circleci/python:3.7.4-stretch
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout:
+          name: Checkout Streamlit code
+
+      #################################################################
+      # Pre Cache Steps
+      #################################################################
+      - run:
+          <<: *set_env_vars
+
+      - run:
+          <<: *install_graphviz
+
+      - run:
+          name: Create python cache key.
+          command: |
+            md5sum lib/Pipfile.locks/python-3.7.4 > ~/python_version.md5
+            md5sum $(which python) >> ~/python_version.md5
+
+      - run:
+          <<: *create_yarn_cache_key
+
+      #################################################################
+      # Restore from cache
+      #################################################################
+      - restore_cache:
+          <<: *restore_virtualenv
+
+      - restore_cache:
+          <<: *restore_nvm
+
+      - restore_cache:
+          <<: *restore_make
+
+      - restore_cache:
+          <<: *restore_dot
+
+      #################################################################
+      # Pre Make commands
+      #################################################################
+      - run:
+          <<: *install_make
+
+      - run:
+          <<: *install_dot
+
+      - run:
+          <<: *install_nvm
+
+      - run:
+          <<: *activate_virtualenv
+
+      - run:
+          <<: *make_develop
+
+      # NOTE restore protobuf from cache wasn't
+      # working so generating protobufs instead.
+      - run:
+          <<: *generate_protobufs
+
+      - run:
+          name: Make SCSS vars
+          command: |
+            make scssvars
+
+      - run:
+          name: Install Cypress dependencies
+          command: |
+            ${SUDO} apt-get install -y xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+
+      # TODO add cypress dashboard key in package.json
+      # or to env export CYPRESS_RECORD_KEY=<record key>
+      - run:
+          name: Cypress
+          command: |
+            mkdir ~/.streamlit
+            echo '[general]' >  ~/.streamlit/credentials.toml
+            echo 'email = "jonathan@streamlit.io"' >> ~/.streamlit/credentials.toml
+            cd frontend
+            yarn run cy:serve-and-run-all
+
+      - store_test_results:
+          path: frontend/cypress/results
+
+      - store_artifacts:
+          path: mochawesome-report
+
+      - store_artifacts:
+          path: frontend/cypress/videos
+
+      - store_artifacts:
+          path: frontend/cypress/screenshots
+
+      - store_artifacts:
+          path: frontend/cypress/snapshots
