--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "test": "craco test --env=jsdom",
     "cy:open": "unset NODE_OPTIONS && cypress open",
     "cy:run": "unset NODE_OPTIONS && cypress run",
+    "cy:run-all": "../scripts/e2e.sh -a true -c ..",
+    "cy:serve-and-run-all": "NODE_OPTIONS=--max_old_space_size=4096 start-server-and-test start http://localhost:3000 cy:run-all",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -79,7 +81,7 @@
     "@types/styletron-standard": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "cypress": "^3.4.0",
+    "cypress": "^3.4.1",
     "cypress-image-snapshot": "^3.1.1",
     "eslint-config-fbjs": "^3.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -87,8 +89,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-relay": "^1.3.5",
+    "mocha": "5.2.0",
+    "mochawesome": "^4.0.1",
+    "mochawesome-merge": "^2.0.1",
+    "mochawesome-report-generator": "^4.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "scss-to-json": "^2.0.0",
+    "start-server-and-test": "^1.9.1",
     "typescript": "^3.5.3"
   },
   "browserslist": [
