--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,6 @@
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
     "mapbox-gl": "^1.1.1",
-    "mixpanel-browser": "^2.29.0",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^4.12.0",
@@ -56,17 +55,17 @@
     "typed-signals": "^1.0.5",
     "vega": "^5.4.0",
     "vega-embed": "^4.2.1",
-    "vega-lite": "^3.3.0"
+    "vega-lite": "^3.3.0",
+    "xxhashjs": "^0.2.2"
   },
   "devDependencies": {
     "@craco/craco": "^5.2.4",
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
-    "@types/jest": "^24.0.15",
-    "@types/mixpanel-browser": "^2.23.1",
-    "@types/node": "^12.6.8",
-    "@types/plotly.js": "^1.44.9",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^12.0.8",
+    "@types/plotly.js": "^1.44.8",
     "@types/prismjs": "^1.16.0",
     "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
@@ -79,6 +78,7 @@
     "@types/styletron-engine-atomic": "^1.1.0",
     "@types/styletron-react": "^5.0.1",
     "@types/styletron-standard": "^2.0.0",
+    "@types/xxhashjs": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "cypress": "^3.4.1",
