#1159 add parameter to specify "BGR" color channel in st.image (#1222)
* Adding format parameter in order to handle BGR images

* testing marshall images RGB and BGR

* verifying np_shape

* Added cv2 dependency

* cv2 to opencv-python

* lock file with opencv-python

* lock file with opencv-python for python 3.7.4

* Fixing optional parameter

* Replacing format with channels, and adding docs

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -30,7 +30,7 @@ pydot = "*"
 tensorflow = "*"
 seaborn = "*"
 prometheus-client = "*"
-
+opencv-python = "*"
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
