Ignore VSCode configs (#1241)

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ lib/Pipfile.lock
 frontend/cypress/videos
 __diff_output__
 cypress.env.json
+
+########################################################################
+# VSCode
+########################################################################
+.vscode/
