--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,11 +89,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-relay": "^1.3.5",
+    "hard-source-webpack-plugin": "^0.13.1",
     "mocha": "5.2.0",
+    "mocha-junit-reporter": "^1.23.1",
+    "mocha-multi-reporters": "^1.1.7",
     "mochawesome": "^4.0.1",
     "mochawesome-merge": "^2.0.1",
     "mochawesome-report-generator": "^4.0.1",
-    "hard-source-webpack-plugin": "^0.13.1",
     "scss-to-json": "^2.0.0",
     "start-server-and-test": "^1.9.1",
     "typescript": "^3.5.3"
