Enhance Mochawesome report with screenshots (#1263)
* add screenshots from failed tests to the mochawesome report
* pass cypress dashboard record flag via package.json instead of directly in e2e.sh

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,8 @@ lib/Pipfile.lock
 frontend/cypress/videos
 __diff_output__
 cypress.env.json
+mochawesome-report
+mochawesome
 
 ########################################################################
 # VSCode
