--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": ".",
   "scripts": {
-    "start": "craco start",
-    "build": "./scripts/preload.sh && craco build",
-    "test": "craco test --env=jsdom",
+    "start": "export NODE_OPTIONS=--max_old_space_size=4096 && craco start",
+    "build": "export NODE_OPTIONS=--max_old_space_size=4096 && ./scripts/preload.sh && craco build",
+    "test": "export NODE_OPTIONS=--max_old_space_size=4096 && craco test --env=jsdom",
     "cy:open": "unset NODE_OPTIONS && cypress open",
     "cy:run": "unset NODE_OPTIONS && cypress run",
     "cy:run-all": "../scripts/e2e.sh -a true -c .. -r",
