--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -40,6 +40,7 @@ opencv-python = "*"
 # add to the dev dependencies above, instead.
 
 [packages]
+astor = "*"
 base58 = "*"
 blinker = "*"
 botocore = "*"
