CircleCI: run frontend tests after python tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,6 +262,14 @@ jobs:
           when: always
 
       #################################################################
+      # Run frontend tests
+      #################################################################
+      - run:
+          name: Run frontend tests.
+          command: |
+            make jstest
+
+      #################################################################
       # Save cache for python virtualenv, node_modules, protobuf
       #################################################################
       - save_cache:
