--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "deck.gl": "^7.2.3",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.3.4",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.3.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
@@ -64,6 +65,7 @@
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
     "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.4",
     "@types/plotly.js": "^1.44.8",
     "@types/prismjs": "^1.16.0",
