--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "@types/clipboard": "^2.0.1",
     "@types/d3": "^5.7.2",
     "@types/d3-graphviz": "^2.6.2",
+    "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^12.0.8",
     "@types/plotly.js": "^1.44.8",
@@ -89,6 +90,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-relay": "^1.3.5",
+    "fetch-mock": "^7.3.9",
     "hard-source-webpack-plugin": "^0.13.1",
     "mocha": "5.2.0",
     "mocha-junit-reporter": "^1.23.1",
