Run Prettier on Cypress tests

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,11 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -21,7 +17,5 @@
     "strict": true,
     "target": "es5"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
