--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "cy:serve-and-run-all": "NODE_OPTIONS=--max_old_space_size=4096 start-server-and-test start http://localhost:3000 cy:run-all",
     "typecheck": "tsc --noEmit"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "../scripts/format.sh"
+    }
+  },
   "dependencies": {
     "aws-sdk": "^2.524.0",
     "baseui": "^8.17.1",
@@ -90,6 +95,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "hard-source-webpack-plugin": "^0.13.1",
+    "husky": "^3.0.5",
     "mocha": "5.2.0",
     "mocha-junit-reporter": "^1.23.1",
     "mocha-multi-reporters": "^1.1.7",
@@ -97,6 +103,7 @@
     "mochawesome-merge": "^2.0.1",
     "mochawesome-report-generator": "^4.0.1",
     "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.1",
     "scss-to-json": "^2.0.0",
     "start-server-and-test": "^1.9.1",
     "typescript": "^3.6.2"
