--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -31,6 +31,7 @@ tensorflow = "*"
 seaborn = "*"
 prometheus-client = "*"
 opencv-python = "*"
+black = "*"
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
@@ -38,7 +39,6 @@ opencv-python = "*"
 # IMPORTANT: We should try very hard *not* to add dependencies to Streamlit.
 # And if something is only required for testing, but not anything else, please
 # add to the dev dependencies above, instead.
-black = "*"
 
 [packages]
 astor = "*"
@@ -53,7 +53,7 @@ future = "*"
 # specifically concurrent.futures in python2
 futures = {version = "*",markers = "python_version < '3.0'"}
 numpy = "*"
-pandas = ">=0.18.0"
+pandas = "<0.25.0"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
 pillow = "!=5.1.0"
 # Set protobuf version based on the protoc version on the release machine (i.e.
