--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -31,6 +31,7 @@ tensorflow = "*"
 seaborn = "*"
 prometheus-client = "*"
 opencv-python = "*"
+requests-mock = "*"
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
@@ -58,6 +59,7 @@ pillow = "!=5.1.0"
 # Set protobuf version based on the protoc version on the release machine (i.e.
 # Thiago's machine)
 protobuf = ">=3.6.0"
+requests = "*"
 toml = "*"
 # 5.0 has a fix for etag header: https://github.com/tornadoweb/tornado/issues/2262
 # 6.0 doesn't support Python 2
