--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -3,6 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[pipenv]
+allow_prereleases = true
+
 [dev-packages]
 flake8 = "*"
 funcsigs = {version = "*",markers = "python_version < '3.0'"}
@@ -31,7 +34,7 @@ tensorflow = "*"
 seaborn = "*"
 prometheus-client = "*"
 opencv-python = "*"
-black = "*"
+black = {version = "*",markers = "python_version >= '3.6'"}
 # TODO(armando): Automate syncing of requirements to conda/streamlit/meta.yaml
 # When you update the packages here, you have to update
 # conda/streamlit/meta.yaml as well.
@@ -53,11 +56,10 @@ future = "*"
 # specifically concurrent.futures in python2
 futures = {version = "*",markers = "python_version < '3.0'"}
 numpy = "*"
-pandas = "<0.25.0"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
 pillow = "!=5.1.0"
-# Set protobuf version based on the protoc version on the release machine (i.e.
-# Thiago's machine)
+# Set protobuf version based on the protoc version on the release machine
+# (i.e. Thiago's machine)
 protobuf = ">=3.6.0"
 toml = "*"
 # 5.0 has a fix for etag header: https://github.com/tornadoweb/tornado/issues/2262
@@ -66,5 +68,11 @@ tornado = ">=5.0,<6.0"
 tzlocal = "*"
 watchdog = "*"
 
-[pipenv]
-allow_prereleases = true
+# Only Python 3.x packages
+[python3]
+pandas = "*"
+
+# Only Python 2.x packages
+[python2]
+futures = "*"
+pandas = "<0.25.0"
