Test running streamlit commands "bare" (#133)
- Adds a new test step to CircleCI: "Run Integration Tests", and an associated Make rule `make integration-tests`
- This runs `scripts/run_bare_integration_tests.py`, which runs all the e2e tests in "bare" mode - that is, via `python script.py` instead of `streamlit run script.py`. The test script ensures that all the e2e scripts exit with a zero exit code.
- Streamlit detects if it's running in bare mode via a new global, `_is_running_with_streamlit`. This defaults to false, and gets set to true by the `streamlit run` CLI command.
- When running in bare mode, streamlit does not show "missing ReportContext" warnings.
- This PR also pins the streamlit numpy dependency to < 1.17 when installed in a Python 2 environment; numpy 1.17 dropped support for Py2.

Fixes #122, #108

--- a/lib/Pipfile
+++ b/lib/Pipfile
@@ -46,7 +46,6 @@ click = ">=7.0"
 enum-compat = "*"
 # python3 code backported to python2
 future = "*"
-numpy = "*"
 # 5.1.0 has compatibility issues https://github.com/python-pillow/Pillow/issues/3068
 pillow = "!=5.1.0"
 # Set protobuf version based on the protoc version on the release machine
@@ -64,8 +63,10 @@ watchdog = "*"
 # Only Python 3.x packages
 [python3]
 pandas = "*"
+numpy = "*"
 
 # Only Python 2.x packages
 [python2]
 futures = "*"
 pandas = "<0.25.0"
+numpy = "<1.17.0"
